app/assets/stylesheets/partials/modules/_section-nav.scss
/* ======================================================================================
   @MODULES -> SECTION NAV
   ====================================================================================== */

/*
  Usage:
    Part of the main template that sits directly under the main site header but only for certain pages, that holds the 'Section nav' and 'Show products/deals/events centre selector' UI.

  Demo:
    Style Guide -> Modules -> Section Nav
*/

/* Note: this will be replaced by a dynamic breakpoint set via JS: https://jira.mywestfield.com/browse/WSF-5868 */
$section-nav-breakpoint: 1000 !default;

.section-nav {
	@include font-size($font-size-sml, 1.5);

	@include respond-min($non-palm) {
    @include font-size($font-size, 1.5);
  }

  /* [CATEGORY NAV]
	-------------------------------------------------------*/
	.nav-contextual {
		/* Need to make room for the centre selector toggle button */
		@include to-rem(margin-right, 41);
	  margin-bottom: 0;
	  border-bottom: 0;

		@include respond-min($section-nav-breakpoint) {
	    margin-right: 0;
	  }

		@include respond-max($section-nav-breakpoint - 1) {
	    .drop-down {display: none;}
	  }

	  /* Change positioning of drop down pointer */
	  .pointer-up:before {
	  	/* Webkit */
		  @include target-webkit {top: -8px;}

			/* IE 10 */
	    @include ie-10-up {top: -7px;}
	  }
	}

  /* TODO Modifier: temp fix for Deals version because it doesn't use the centre selector */
  &.section-nav--deals .nav-contextual {margin-right: 0;}

		/* Turn off `overflow: hidden` so we can see the drop down's at this breakpoint */
		@include respond-min($section-nav-breakpoint) {
			.nav-contextual__clip__inner {
				&,
				.no-js & {overflow: visible;}
			}
		}

			/* Section nav list */
			.nav-contextual__list {

				/* Increase spacing between list items at this breakpoint */
				@include respond-min($non-palm) {
			    > li {
			    	@include to-rem(margin-left, $spacing-half);

		        &:first-child {margin-left: 0;}
			    }
			  }

			  /* Turn off oversize width as we don't need the scrolling JS behaviour */
				@include respond-min($section-nav-breakpoint) {
					width: auto;
				}
			}

	/* [CENTRE SELECTOR]
	-------------------------------------------------------*/

	/* Container */
	.section-nav__centre-selector {
		@extend %clear-fix;
		border-top: 1px solid $color-grey-med-1;
		@include to-rem(padding-top padding-bottom, $spacing-quarter);

		/* Always show at this breakpoint */
		@include respond-min($section-nav-breakpoint) {

			/* JS users */
	    .js & {display: block;}

	    border-top: 0;
	    padding: 0;
	  }
	}

		/* Toggle button */
		.btn--main-compact-icon-sml {
			position: absolute;
			right: 0;
			top: 50%;
			@include translateY(-50%);

			@include respond-min($section-nav-breakpoint) {
		    display: none;
		  }

		  /* Non JS users */
		  .no-js & {display: none;}
		}

		/* Centre selector */
		.flag {
			width: 100%;

		  /* Sit over to the right edge at this breakpoint */
			@include respond-min(421) {
				width: auto;
		    float: right;
		  }

		  /* Make the nav and centre selector sit side by side at this breakpoint */
			@include respond-min($section-nav-breakpoint) {
				float: none;
		    position: absolute;
				right: 0;
				/*
					'65' is the height of the section nav, this is a bit fragile but should be stable enough + I'd rather not bring JS into it.
				*/
				@include to-rem(top, -65);
				@include to-rem(height, 65);
		  }
		}

			/* Centre selector label */
			.flag__img {
				color: $color-grey-med-2;
				@include font-size($font-size-sml, 1.5);
				@include to-rem(padding-right, $spacing-half);

				/* Bring label text into view at this breakpoint */
				@include respond-min(421) {
			    @include hide-visually-off;
			  }

			  /* Increase the gutter at this breakpoint */
				@include respond-min($section-nav-breakpoint) {
			    @include to-rem(padding-right, $spacing-base);
			  }
			}
}

